presentation/core/src/main/java/com/example/helper/error/IErrorHandler.kt
package com.example.helper.error

interface IErrorHandler {
    fun handleError(throwable: Throwable)
}
